Move psk auth logic to IdentityFilter and IdentityProvider
